# layerflow

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  manifest.json  package-lock.json  package.json  pyrightconfig.json  skills-lock.json  tsconfig.json  vite.config.mts  vitest.config.ts
.claude/: ecc-tools.json  identity.json
.claude/commands/: backend-feature-or-provider-addition.md  feature-development.md  (+1 more)
.codex/: AGENTS.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  health.py  images.py  models.py
backend/app/core/: config.py  errors.py  logging.py  rate_limit.py  security.py  url_security.py
backend/app/db/: session_repository.py  sqlite.py
backend/app/providers/: base.py  chatgpt_web.py  mock_provider.py
backend/app/services/: image_edit_service.py  user_session_service.py
backend/chatgpt_core/: __init__.py  client.py  errors.py  image_download.py  image_generate.py  image_poll.py  image_upload.py  pow_solver.py  sse_parser.py  turnstile.py  types.py
backend/tests/: conftest.py  test_backend.py  test_chatgpt_web_provider.py  test_image_upload_security.py  test_leak_prevention.py  test_provider_concurrency.py
docs/: FEATURE_INTAKE.md  GLOSSARY.md  HARNESS.md  HARNESS_BACKLOG.md  README.md  backend-and-photoshop-uxp-testing-guide.md  development-roadmap.md  gpt-image-2-api-guide.md  provider-api-verification.md  uxp-api-verification.md
src/: App.tsx  index.html  index.tsx
(+84 files in other folders)
