[project]
name = "inpaintkit-backend"
version = "0.1.0"
description = "InpaintKit AI image editing backend service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "cryptography>=41.0.0",
    "curl-cffi==0.7.4",
    "Pillow>=9.5.0",
    "pybase64>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-asyncio>=0.21.0",
]
